tests/neg-custom-args/captures/unbox-overrides.check
-- [E164] Declaration Error: tests/neg-custom-args/captures/unbox-overrides.scala:9:6 ----------------------------------
9 |  def bar(x: C @use): C // error
  |      ^
  |      error overriding method bar in trait A of type (x: C): C;
  |        method bar of type (x: C @use): C has incompatible type
  |
  | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/unbox-overrides.scala:16:6 ---------------------------------
16 |  def foo(x: C @use): C // error
   |      ^
   |      error overriding method foo in trait B2 of type (x: C): C;
   |        method foo of type (x: C @use): C has incompatible type
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/unbox-overrides.scala:19:15 --------------------------------
19 |abstract class C extends A[C], B2 // error
   |               ^
   |               error overriding method bar in trait A of type (x: C): C;
   |                 method bar in trait B2 of type (x: C @use): C has incompatible type
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/unbox-overrides.scala:26:6 ---------------------------------
26 |  def foo[T](a: Int)(x: C @use): C // error
   |      ^
   |      error overriding method foo in trait Poly of type [T](a: Int)(x: C): C;
   |        method foo of type [T](a: Int)(x: C @use): C has incompatible type
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/unbox-overrides.scala:35:6 ---------------------------------
35 |  def foo(x: (List[C], List[C]) @use): Unit  // error
   |      ^
   |      error overriding method foo in trait D1 of type (x: (List[C @use], List[C])): Unit;
   |        method foo of type (x: (List[C], List[C]) @use): Unit has incompatible type
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/unbox-overrides.scala:36:6 ---------------------------------
36 |  def bar(x: (List[C], List[C]) @use): Unit  // error
   |      ^
   |      error overriding method bar in trait D1 of type (x: (List[C @use], List[C @use])): Unit;
   |        method bar of type (x: (List[C], List[C]) @use): Unit has incompatible type
   |
   | longer explanation available when compiling with `-explain`
